@@ -84,7 +84,7 @@ biosFile        none
 
 # Filter to use. 0=no filter, 1=TV Mode, 2=2xSaI, 3=Super 2xSaI, 4=Super Eagle
 # 5=Pixelate, 6=Motion Blur, 7=AdvanceMAME Scale2x, 8=Simple 2x,
-# 9=Bilinear, 10=Bilinear Plus
+# 9=Bilinear, A=Bilinear Plus
 filter          0
 
 # Disable status messages. 0=false, any other value means true
@@ -146,3 +146,7 @@ flashSize       0
 # Sound volume
 # 0=1x, 1=2x, 2=3x, 3=4x
 soundVolume     0
+
+# Interframe blending
+# 0=none, 1=motion blur, 2=smart
+ifbType         0
